--- a/about/staff_minneapolis_elementary.html
+++ b/about/staff_minneapolis_elementary.html
@@ -190,7 +190,7 @@ layout: default
                              </ul>
                         <ul class="thumbnails">
                             {% include person.html name="Edwin Cruz" role="Sr. Recruitment Manager" %}
-                            {% include person.html name="Anna Wagner" role="Volunteer Coordinator" %}
+                            {% include person.html name="Anna Wagnerr" role="Volunteer Coordinator" %}
                         </ul>
                    
                     </div>
