--- a/about/staff_minneapolis.html
+++ b/about/staff_minneapolis.html
@@ -46,6 +46,7 @@ layout: default
                             {% include person.html name="Jennifer Christensen" role="Kindergarten Teacher" %}
                             {% include person.html name="Colin Alsbro" role="Kindergarten Teacher" %}
                         </ul>
+                          </div>
                 </div>
                 <h3>First Grade</h3>
                 <div class="row-fluid">
