Fix syntax errors

--- a/about/staff_minneapolis.html
+++ b/about/staff_minneapolis.html
@@ -52,7 +52,7 @@ layout: default
                 <div class="row-fluid">
                     <div class="span12">
                         <ul class="thumbnails">
-                            {% include person.html name="Alex McCoy" role="{% include person.html name="Alex McCoy" role="Classroom Teacher" %}" %}
+                            {% include person.html name="Alex McCoy" role="Classroom Teacher" %}
                             {% include person.html name="Katherine Laughlin" role="First Grade Teacher" %}
                             {% include person.html name="Aaron Ziman" role="Educational Assistant" %}
                             {% include person.html name="Mai Vang" role="First Grade Teacher" %}
