--- a/about/staff_minneapolis_elementary.html
+++ b/about/staff_minneapolis_elementary.html
@@ -80,22 +80,21 @@ layout: default
                 <div class="row-fluid">
                     <div class="span12">
                         <ul class="thumbnails">
-                            {% include person.html name="Emily Hoeppner" role="Classroom Teacher and Grade Team Chair" %}
-                            {% include person.html name="Prescott Jones" role="Educational Assistant" %}
-                            {% include person.html name="Emily Shimota" role="Educational Assistant" %}
-                             {% include person.html name="Jill Nilsen" role="Classroom Teacher" %}
+                            {% include person.html name="Alexis Hillbeck" role="Special Education Teacher" %}
+                            {% include person.html name="Benjamin Stay" role="Special Education Teacher" %}
+                            {% include person.html name="Caroline Becker" role="Special Education Behavioral Support" %}
+                             {% include person.html name="Erika Hansen" role="Reading Interventionist" %}
                         </ul>
                         <ul class="thumbnails">
                            
-                            {% include person.html name="Briana Moses" role="Classroom Teacher" %}
-                            {% include person.html name="Helen Peightal" role="Educational Assistant and Art Teacher" %}
-                            {% include person.html name="Marcas Dorsey" role="Educational Assistant" %}
-                                       {% include person.html name="Missy Mathis" role="Educational Assistant" %}
+                            {% include person.html name="Michelle Staack" role="Math Specialist" %}
+                            {% include person.html name="Shayla Jenkins" role="Setting III Educational Assistant" %}
+                            {% include person.html name="Taqwa Dardery" role="Social Work" %}
+                                       {% include person.html name="Dae Selcer" role="English Lanuage Teacher" %}
                         </ul>
                         <ul class="thumbnails">
                  
-                            {% include person.html name="Zuli Morales" role="Educational Assistant" %}
-                            {% include person.html name="Shanequa Cook" role="Educational Assistant" %}
+                            {% include person.html name="Jennifer Bates" role="In-House Substitute" %}
                         </ul>
                     </div>
                 </div>
