--- a/about/staff_network.html
+++ b/about/staff_network.html
@@ -17,20 +17,20 @@ layout: default
                             {% include person.html name="Erica Jaastad" role="Director of Curriculum and Professional Development" %}
                                </ul>
                         <ul class="thumbnails">
-                             {% include person.html name="Paris Kyles" role="Director of Student Culture" %}
-                            {% include person.html name="Rachel Hemsey" role="Special Education Coordinator" %}
                       {% include person.html name="Laura Durden" role="Advancement Manager" %}
-                            {% include person.html name="Edwin Cruz" role="Senior Recruitment Manager" %}
+           {% include person.html name="Edwin Cruz" role="Director of Talent and Student Recruitment" %}
+                            {% include person.html name="Lahens St. Fleur" role="Community Outreach Manager" %}
+                              {% include person.html name="Anna Wagner" role="Volunteer Coordinator" %}
                                 </ul>
                         <ul class="thumbnails">
-                                 {% include person.html name="Lahens St. Fleur" role="Student Recruiter" %}
-                              {% include person.html name="Anna Wagner" role="Volunteer Coordinator" %}
+
                              {% include person.html name="Kelly Mulvehill" role="Mindfulness/Wellness Director" %}
                                 {% include person.html name="Mandy Lindstrom" role="Early Childhood Coordinator" %}
+                                {% include person.html name="Adi Perez" role="Office Manager" %}
+                            {% include person.html name="Octavia McLaurin" role="Office Assistant" %}
                               </ul>
                         <ul class="thumbnails">
-                            {% include person.html name="Adi Perez" role="Office Manager" %}
-                            {% include person.html name="Octavia McLaurin" role="Office Assistant" %}
+
                              {% include person.html name="Jasmine Sanchez" role="Daycare Teacher" %}
                              {% include person.html name="Erika Arrivillaga" role="Daycare Teacher" %}
                             
