--- a/about/staff_stpaul.html
+++ b/about/staff_stpaul.html
@@ -25,7 +25,7 @@ layout: default
                         <ul class="thumbnails">
                             {% include person.html name="Mercedes Lee" role="Kindergarten Teacher/ Grade Team Lead" %}
                             {% include person.html name="Chrissy Dornon" role="Kindergarten Teacher" %}
-                            {% include person.html name="Erin Engelhardt" role="Kindergarten Teacher" %}
+
                         </ul>
                     </div>
                 </div>
@@ -34,7 +34,7 @@ layout: default
                     <div class="span12">
                         <ul class="thumbnails">
                             {% include person.html name="Kathleen Boland" role="First Grade Teacher" %}
-
+                            {% include person.html name="Erin Engelhardt" role="First Grade Teacher" %}
                         </ul>
 
                     </div>
@@ -43,7 +43,6 @@ layout: default
                 <div class="row-fluid">
                     <div class="span12">
                         <ul class="thumbnails">
-                            {% include person.html name="Stephanie Kimble" role="Yoga Teacher" %}
                             {% include person.html name="Ryan Thornton" role="World Languages" %}
                         </ul>
  
@@ -55,7 +54,7 @@ layout: default
                         <ul class="thumbnails">
                             {% include person.html name="Allen Mengis" role="Special Education Teacher" %}
                             {% include person.html name="Laquita Davis" role="Fellow" %}
-                            {% include person.html name="Julia Marksuee" role="Educational Assistant" %}
+                            {% include person.html name="Julia Marksue" role="Educational Assistant" %}
 
                         </ul>
 
