--- a/about/staff_minneapolis_primary.html
+++ b/about/staff_minneapolis_primary.html
@@ -34,6 +34,7 @@ layout: default
                         <ul class="thumbnails">
                              {% include person.html name="Allie Evered" role="Pre Kindergarten Teacher" %}
                             {% include person.html name="Kelly Brooks" role="Pre Kindergarten Teacher" %}
+                              {% include person.html name="Ana Poole" role="Pre Kindergarten Assistant" %}
                         </ul>
                     </div>
                 </div>
@@ -45,13 +46,17 @@ layout: default
                             {% include person.html name="Emma Lindley" role="Kindergarten Teacher" %}
                             {% include person.html name="Jennifer Christensen" role="Kindergarten Teacher" %}
                             {% include person.html name="Colin Alsbro" role="Kindergarten Teacher" %}
+                                   </ul>
+                        <ul class="thumbnails">
+                            {% include person.html name="Devin Peterhans" role="Educational Assistant" %}
                         </ul>
                 </div>
                 <h3>First Grade</h3>
                 <div class="row-fluid">
                     <div class="span12">
                         <ul class="thumbnails">
-                            {% include person.html name="Alex McCoy" role="Classroom Teacher" %}
+                            {% include person.html name="Alex McCoy" role="First Grade Teacher/
+Grade Team Lead" %}
                             {% include person.html name="Katherine Laughlin" role="First Grade Teacher" %}
                             {% include person.html name="Aaron Ziman" role="Educational Assistant" %}
                             {% include person.html name="Mai Vang" role="First Grade Teacher" %}
@@ -96,10 +101,10 @@ layout: default
                             {% include person.html name="Ann Bexell" role="Special Education Teacher" %}
                             {% include person.html name="Ashley Willeck" role="Math Specialist" %}
                             {% include person.html name="Jay Diaferio" role="In-house Substitute" %}
-                            {% include person.html name="Kalimi Baxter" role="Special Education Teacher" %}
+                              {% include person.html name="Melissa Lindquist" role="English Language Coordinator and English Language Development Teacher" %}
                         </ul>
                         <ul class="thumbnails">
-                            {% include person.html name="Melissa Lindquist" role="English Language Coordinator and English Language Development Teacher" %}
+                         
                             {% include person.html name="Sarah Brunner" role="Special Education Teacher" %}
                             {% include person.html name="Veda Chokshi" role="Reading Specialist" %}
                             {% include person.html name="Taqwa Dardery" role="Social Work" %}
@@ -111,6 +116,7 @@ layout: default
                         <ul class="thumbnails">
                             {% include person.html name="Jeff Stensrud" role="Behavior Specialist" %} 
                             {% include person.html name="Blake Pederson" role="Recess Student Supervisor" %}
+                                  {% include person.html name="Michael Berry" role="Student Success Coach" %}
                         </ul>
                     </div>
                 </div>
