--- a/about/board.html
+++ b/about/board.html
@@ -14,15 +14,20 @@ layout: default
                         <ul class="thumbnails board">
                             {% include person.html name="Rick Campion" role="Co-Founder, Executive Director, Prodeo Academy - Ex-Officio" %}
                             {% include person.html name="Rachel Nelson" role="Parent Member" %}
-                            {% include person.html name="Emily Jones" role="Teacher at Prodeo Academy" %}
                             {% include person.html name="Jim Horn" role="Chief Human Resources Officer, Ulteig" %}
+                           {% include person.html name="Jeff Klinefelter" role="Board Treasurer" %}
                         </ul>
                         <ul class="thumbnails board">
-                            {% include person.html name="Jeff Klinefelter" role="Board Treasurer" %}
+
                             {% include person.html name="Lewis Remele" role="Board Secretary<br>Shareholder, Bassford Remele" %}
                             {% include person.html name="Maggie Skrypek" role="Board Chair<br>Research Scientist, Amherst H. Wilder Foundation" %}
                             {% include person.html name="Darrell Thompson" role="President<br>Bolder Options" %}
+                            {% include person.html name="Ben Whitney" role="" %}
                         </ul>
+                            <ul class="thumbnails board">
+                             {% include person.html name="Rachel Sand" role="Teacher at Prodeo Academy" %}
+                        </ul>
+                        
                     </div>
                 </div>
 
