--- a/enroll.html
+++ b/enroll.html
@@ -56,7 +56,7 @@ layout: default
                         </ol>
                     </div>
                 </div>
-                <h3>Why Prodeo?</h3>
+               <!-- <h3>Why Prodeo?</h3>
                 <div class='row-fluid'>
                     <div class='span12'>
                         <p></a></p>
@@ -74,6 +74,7 @@ layout: default
                         </ol>
                     </div>
                 </div>
+-->
             </div>
         </div>
     </div>
