--- a/enroll.html
+++ b/enroll.html
@@ -5,7 +5,7 @@ layout: default
 <div class='container'>
     <div class='row'>
         <div class='span4 panel' id='panel-left'>
-            <div class='content'>
+            <div class='content'><img src="/assets/student_life/100.jpg"><!--
                 <h3>Get in Touch</h3>
                 <p>If you are interested in learning more about our inspiring community, feel free to contact us.</p>
                 <blockquote>
@@ -24,7 +24,7 @@ layout: default
                   <span>edwincruz@prodeoacademy.org</span>
                     <br>
                     <span>(312) 998-7069</span>
-                </blockquote>
+                </blockquote>-->
             </div>
         </div>
         <div class='span8 panel' id='panel-right'>
