--- a/enroll.html
+++ b/enroll.html
@@ -32,13 +32,21 @@ layout: default
                 <h2>Enroll Your Child</h2>
                 <div class='row-fluid'>
                     <div class='span12'>
-                        <p class="lead">Two Easy Ways to Apply:</p>
+                        <p class="lead"><b>Two Easy Ways to Apply:</b></p>
                         <ol>
-                            <li>Complete an online application by clicking on this link: <a href="https://prodeoacademy.schoolmint.net/signup" target="blank">prodeoacademy.schoolmint.net/signup</a></li>
+                            <li>Apply online here: <a href="https://prodeoacademy.schoolmint.net/" target="_blank">https://prodeoacademy.schoolmint.net/</a></li>
+The link above will take you to our SchoolMint enrollment website which
+you will use to submit an application for any one of our Prodeo Academy
+schools.
+<p>
+You will need to enter your email address and/or mobile phone
+number to create an account and submit an application.
+                                
+                               <!-- Complete an online application by clicking on this link: <a href="https://prodeoacademy.schoolmint.net/signup" target="blank">prodeoacademy.schoolmint.net/signup</a></li>-->
                         </p>
                       
                         <p>
-                            <li>Drop by one of our campuses to fill out an application:
+                            <li><b>Drop by</b> one of our campuses to fill out an application:
                                 <p>
                         <b>Prodeo - Minneapolis</b>
                         <br>
