--- a/enroll.html
+++ b/enroll.html
@@ -38,9 +38,9 @@ layout: default
 The link above will take you to our SchoolMint enrollment website which
 you will use to submit an application for any one of our Prodeo Academy
 schools.
-<p>
-You will need to enter your email address and/or mobile phone
-number to create an account and submit an application.
+                            <p></p>
+<b>You will need to enter your email address and/or mobile phone
+    number to create an account and submit an application.</b>
                                 
                                <!-- Complete an online application by clicking on this link: <a href="https://prodeoacademy.schoolmint.net/signup" target="blank">prodeoacademy.schoolmint.net/signup</a></li>-->
                         </p>
