--- a/enroll.html
+++ b/enroll.html
@@ -98,11 +98,11 @@ through 6th grade, and Prodeo’s St. Paul campus will be offering Pre-Kindergar
         If you are interested in learning more or would like to schedule a school tour, feel
         free to contact us.<p></p>
 Lahens St. Fleur<br />
-lahensstfleur@prodeoacademy.org<br />
+        <a href="mailto:lahensstfleur@prodeoacademy.org">lahensstfleur@prodeoacademy.org</a><br />
         612-207-1706<p></p>
         <i>Hablamos Español</i><br />
 Edwin Cruz<br />
-edwincruz@prodeoacademy.org<br />
+        <a href="mailto:edwincruz@prodeoacademy.org">edwincruz@prodeoacademy.org</a><br />
 612-987-2694
                  </div>
         </div>   
