--- a/about/staff_minneapolis_primary.html
+++ b/about/staff_minneapolis_primary.html
@@ -34,7 +34,7 @@ layout: default
                         <ul class="thumbnails">
                              {% include person.html name="Allie Evered" role="Pre Kindergarten Teacher" %}
                             {% include person.html name="Kelly Brooks" role="Pre Kindergarten Teacher" %}
-                              {% include person.html name="Ana Poole" role="Pre Kindergarten Assistant" %}
+                              {% include person.html name="Ariana Poole" role="Pre Kindergarten Assistant" %}
                         </ul>
                     </div>
                 </div>
