--- a/events.html
+++ b/events.html
@@ -11,20 +11,24 @@ layout: default
                 <div class="row-fluid">
                     <div class="span8">
                         <h3>
-                            Power Up Prodeo
-                            <small>Thursday, May 3rd - 5:00-9:00pm</small>
+                            Save the Date for Power Up Prodeo! 
+                            <small>Thursday, May 9, 2019.</small>
                         </h3>
-                        <p>Power Up Prodeo: A Fundraising Party for Our Scholars is on Thursday, May 3rd from 5:00-9:00pm.</p>
-                        <p>This year, it will be held at the Minneapolis Event Center.</p>
-                        <p>Join us at 5PM for networking cocktail hour, featuring heavy apps throughout multiple food stations and bars.</p>
-                        <p>At 6:30PM, we will have a short 30 minute program, including a video featuring Prodeo teachers. Afterwards, people are welcome to network and mingle again in the bar area.</p>
-                        <p>Table Sponsorships are available. For more information, please contact Laura Durden at 612-524-8649.</p>
-                        <p>Tickets are $85.00. Visit <a href="https://tinyurl.com/powerupprodeo" target="blank">https://tinyurl.com/powerupprodeo</a> to register!</p>
-                        <p>Support Prodeo scholars and be part of closing the achievement gap in Minnesota.</p>
-                        <p>We hope to see you there!</p>
+
+                        <p><b>It will be an inspiring evening celebrating Prodeo Academy's mission.</b> </p>
+
+<p>Join us at 5:30PM for a networking cocktail hour, featuring heavy apps throughout multiple food stations and bars.</p>
+
+<p>At 7:00PM, we will have a short 30 minute program, including a video featuring Prodeo teachers and scholars. Afterwards, people are welcome to network and mingle again.</p>
+
+<p>Table Sponsorships are available. For more information, please contact Laura Durden at 612-524-8649.</p>
+
+<p>All proceeds from Power Up Prodeo propel the work of Prodeo Academy’s mission to close the opportunity gap. </p>
+
+<p><a href="http://bidpal.net/powerupprodeo2019" target="_blank">Purchase single tickets or a table of 10 here!</a>   </p>
                     </div>
                     <div class="span4">
-                        <img src="/assets/student_life/calendar.jpg">
+                        <img src="/assets/student_life/030519.png">
                     </div>
                 </div>
             </div>
