--- a/events.html
+++ b/events.html
@@ -25,7 +25,7 @@ layout: default
 
 <p>All proceeds from Power Up Prodeo propel the work of Prodeo Academy’s mission to close the opportunity gap. </p>
 
-<!--<p><a href="http://bidpal.net/powerupprodeo2019" target="_blank">Purchase single tickets or a table of 10 here!</a>   </p>-->
+<p><a href="http://bidpal.net/powerupprodeo2019" target="_blank">Purchase single tickets or a table of 10 here!</a>   </p>
                     </div>
                     <div class="span4">
                         <img src="/assets/student_life/030519.png">
