--- a/enroll.html
+++ b/enroll.html
@@ -103,7 +103,7 @@ St. Paul, MN 55117
                     <div class='span12'>
                         <p></a></p>
 <strong>Does Prodeo cost money?</strong><p></p>
-No. Prodeo Academy schools are tuition-free, open-enrollment charter schools that provide a college preparatory education.
+No. Prodeo Academy schools are tuition-free, open-enrollment charter schools that provide a college preparatory education.<p></p>
 <strong>Which grades do Prodeo Academy schools serve?</strong><p></p>
 In the 2019-20 school year, Prodeo’s Minneapolis campus will be offering Pre-Kindergarten through 6th grade, and Prodeo’s St. Paul campus will be offering Pre-Kindergarten through 2nd grade.
 <p></p>
