--- a/student_life/mpls_primary.html
+++ b/student_life/mpls_primary.html
@@ -11,13 +11,13 @@ layout: default
                     School Calendar - Minneapolis Primary
                     <small class='pull-right'>
                         <br>
-                        <a href='/assets/18-19_Calendar_Final_MPLSPrimary.pdf'>Download PDF Calendar</a>
+                        <a href='/assets/Prodeo Academy - Mpls Primary - 2019-20.pdf'>Download PDF Calendar</a>
                     </small>
                 </h2>
 <center>
-                        <img src='/assets/student_life/18-19_Calendar_Final_MPLSPrimary-1.gif'>
+                        <img src='/assets/student_life/Prodeo Academy - Mpls Primary - 2019-20.pdf'>
 <br />
-                        <img src='/assets/student_life/18-19_Calendar_Final_MPLSPrimary-2.gif'>
+                        <img src='/assets/student_life/Prodeo-Academy---Mpls-Primary---2019-20-2.gif'>
                 </center>
 
                 <br>
