--- a/student_life/mpls_primary.html
+++ b/student_life/mpls_primary.html
@@ -15,7 +15,7 @@ layout: default
                     </small>
                 </h2>
 <center>
-                        <img src='/assets/student_life/Prodeo Academy - Mpls Primary - 2019-20.pdf'>
+                        <img src='/assets/student_life/Prodeo-Academy_Mpls-Primary_2019-20-1.gif'>
 <br />
                         <img src='/assets/student_life/Prodeo-Academy---Mpls-Primary---2019-20-2.gif'>
                 </center>
