--- a/student_life/stpaul_primary.html
+++ b/student_life/stpaul_primary.html
@@ -11,13 +11,13 @@ layout: default
                     School Calendar - St. Paul Primary
                     <small class='pull-right'>
                         <br>
-                        <a href='/assets/18-19_Calendar_St_Paul_Primary.pdf'>Download PDF Calendar</a>
+                        <a href='/assets/student_life/Prodeo Academy - St Paul Primary - 2019-20.pdf'>Download PDF Calendar</a>
                     </small>
                 </h2>
 <center>
-                        <img src='/assets/student_life/18-19_Calendar_St_Paul_Primary-1.gif'>
+                        <img src='/assets/student_life/Prodeo-Academy---St-Paul-Primary---2019-20-1.gif'>
 <br />
-                        <img src='/assets/student_life/18-19_Calendar_St_Paul_Primary-2.gif'>
+                        <img src='/assets/student_life/Prodeo-Academy---St-Paul-Primary---2019-20-2.gif'>
                 </center>
 
                 <br>
