--- a/student_life/mplsmiddle.html
+++ b/student_life/mplsmiddle.html
@@ -8,16 +8,16 @@ layout: default
         <div class='span12 panel' id='panel-main'>
             <div class='content'>
                 <h2>
-                    School Calendar - Minneapolis Primary
+                    School Calendar - Minneapolis Middle
                     <small class='pull-right'>
                         <br>
-                        <a href='/assets/Prodeo Academy - Mpls Primary - 2019-20.pdf'>Download PDF Calendar</a>
+                        <a href='/assets/student_life/Prodeo Academy - Mpls Middle - 2019-20.pdf'>Download PDF Calendar</a>
                     </small>
                 </h2>
 <center>
-                        <img src='/assets/student_life/Prodeo-Academy_Mpls-Primary_2019-20-1.gif'>
+                        <img src='/assets/student_life/Prodeo-Academy---Mpls-Middle---2019-20-1.gif'>
 <br />
-                        <img src='/assets/student_life/Prodeo-Academy---Mpls-Primary---2019-20-2.gif'>
+                        <img src='/assets/student_life/Prodeo-Academy---Mpls-Middle---2019-20-2.gif'>
                 </center>
 
                 <br>
